--- a/index.html
+++ b/index.html
@@ -9,15 +9,16 @@
 </head>
 <body>
     <h1>Rock, paper,scissor</h1>
-    <h2>Chose your attack, or hit the random button</h2>
+    <h2>Chose your attack, see the result and click the replay button for a second try</h2>
 
     <div id="button-game">
-        <button class="button" id="rock">Rock</button>
-        <button class="button" id="paper">Paper</button>
-        <button class="button" id="scissor">Scissor</button>
-        <br>
         
-        <button id="butty" class="butty">Play Random</button>
+        <img src="rock.png" class="button" id="rock"></img>
+        <img src="paper.png" class="button" id="paper"></img>
+        <img src="scissors.png" class="button" id="scissor"></img>
+        <p id="info"></p> <p id="losing"></p> <p id="draw"></p>
+
+        <img src="replay-but.png" class="button" id="replay">
         <script src="script.js"></script>
     </div>
     
