--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 </head>
 <body>
     <h1>Rock, paper,scissor</h1>
-    <h2>Chose your attack, see the result and click the replay button for a second try</h2>
+    <h2>Chose one attack, see the result and then click the replay button for a second try</h2>
 
     <div id="button-game">
         
